@@ -1,3 +1,8 @@
+Fri Aug 27 15:41:48 1999  George Lebl  <jirka@5z.com>
+
+	* gnome-dentry-edit.c: use the new gnome-dentry interface for 
+	  getting the i18n lists
+
 Fri Aug 27 10:30:10 1999  George Lebl  <jirka@5z.com>
 
 	* gnome-dentry-edit.[ch]: add a way to edit the translations of
